# src/main/java/ru/ifmo/puls/presentation/controller/ComplaintController.java
@@ -7,9 +7,11 @@ import org.springframework.web.bind.annotation.RestController;
 import ru.blps.openapi.api.ComplaintApi;
 import ru.blps.openapi.model.ComplaintCreateResponseTo;
 import ru.blps.openapi.model.ComplaintRequestTo;
+import ru.blps.openapi.model.ComplaintResponseTo;
 import ru.ifmo.puls.auth.model.User;
 import ru.ifmo.puls.auth.service.UserService;
 import ru.ifmo.puls.domain.ComplaintConv;
+import ru.ifmo.puls.service.ComplaintManagementService;
 import ru.ifmo.puls.service.ComplaintQueryService;
 
 @RestController
@@ -17,6 +19,7 @@ import ru.ifmo.puls.service.ComplaintQueryService;
 public class ComplaintController implements ComplaintApi {
     private final UserService userService;
     private final ComplaintQueryService complaintQueryService;
+    private final ComplaintManagementService complaintManagementService;
 
     @Override
     @Secured("USER")
@@ -31,5 +34,11 @@ public class ComplaintController implements ComplaintApi {
         return ResponseEntity.ok(
                 new ComplaintCreateResponseTo().id(complaint.getId())
         );
+    }
+
+    @Override
+    @Secured("ADMIN")
+    public ResponseEntity<ComplaintResponseTo> getComplaintByTenderId(Long id) {
+        return ResponseEntity.ok(complaintManagementService.getById(id));
     }
 }
